# colortool

./: README.md  pyproject.toml
src/colortool/: __init__.py  core.py
tests/: __init__.py  test_colortool.py
